--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "ol": "^9.2.4"
   },
   "devDependencies": {
